--- a/style.css
+++ b/style.css
@@ -279,6 +279,10 @@ h6 {
     justify-content: end;
 }
 
+.is-hidden {
+    display: none !important;
+}
+
 /** General Styling **/
 
 html, body {
@@ -381,9 +385,6 @@ ul {
     gap: 1rem;
 }
 
-.product_quantity{
-    
-}
 
 .product_button_wrapper{
     display:flex;
@@ -427,7 +428,11 @@ ul {
 
 
 /* mobile */
-@media(max-width:35rem) {
+@media (max-width:35rem) {
+
+    .lg-only{
+        display: none;
+    }
     .nav_toggle {
         z-index: 9999;
         background-color: transparent;
@@ -478,6 +483,81 @@ ul {
         align-items:baseline;
     }
 
+    /* Product Carousel */
+
+   
+    .carousel{
+        position:relative;
+        aspect-ratio: 1;
+        margin:0 auto;
+    }
+
+    .carousel_image{
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+       
+    }
+
+    .carousel_track {
+        height: 100%;
+        width: 100%;
+        position: relative;
+       
+        height: 100%;
+        transition: transform 250ms ease-in;
+        
+    }
+
+    .product_images{
+        overflow: hidden;
+    }
+
+    .carousel_slide{
+        position:absolute;
+        top:0;
+        bottom: 0;
+        width: 100%;
+    }
+
+    .carousel_button {
+        position: absolute;
+        transform: translateY(-50%);
+    }
+
+    .carousel_button  {
+        display: grid;
+        justify-content: center;
+        align-content: center;
+        height: 40px;
+        aspect-ratio: 1;
+        background-color:var(--clr-white);
+        border:none;
+        border-radius: 1000%;
+        cursor:pointer;
+        top: 50%;
+        transform:translateY(-50%);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+       
+
+    }
+
+    .carousel_button--left{
+        left:10px;
+        z-index: 900;
+    }
+
+    .carousel_button--right{
+        right: 10px;
+        z-index: 900;
+    }
+         
+            
+    
+
+    /* Product info and price */
+   
+
     .product_price_section{
         display: flex;
     }
@@ -497,10 +577,19 @@ ul {
         display: none;
     }
 
+
+
+
 }
 
 
+/*Desktop */
 @media(min-width:35rem){
+
+    .sm-only{
+        display:none;
+    }
+
     .nav_toggle {
         display: none;
     }
@@ -557,7 +646,7 @@ ul {
 
 }
 
- 
+
 
 .attribution {
     font-size: 11px;
