--- a/style.css
+++ b/style.css
@@ -140,15 +140,27 @@ h6 {
 
 }
 
-@media(min-width:50em) {
+@media(min-width:64rem) {
     :root {
         --fs-primary-heading: var(--fs-800);
-        --fs-secondary-heading: var(--fs-500);
+        --fs-secondary-heading: var(--fs-600);
         --fs-accent-heading: var(--fs-100);
         --fs-body: var(--fs-400);
         --fs-menu: var(--fs-300)
     }
 }
+
+@media(min-width:35rem) and (max-width:64rem) {
+    :root {
+        --fs-primary-heading: var(--fs-800);
+        --fs-secondary-heading: var(--fs-800);
+        --fs-accent-heading: var(--fs-200);
+        --fs-body: var(--fs-400);
+        --fs-menu: var(--fs-600)
+    }
+}
+
+
 
 
 /** Utility **/
@@ -290,6 +302,10 @@ html, body {
     font-family: var(--ff-primary);
 }
 
+footer {
+    margin-top: 3rem;
+}
+
 
 header {
     line-height: 1.75rem;
@@ -300,9 +316,7 @@ p {
     font-size: var(--fs-body);
 }
 
-h1 {
-    line-height: 2rem;
-}
+
 
 .tags {
     color: var(--clr-accent-400);
@@ -320,7 +334,7 @@ h1 {
     border-radius: 5px;
     font-weight: var(--fw-bold);
     font-size: var(--fs-300);
-
+    height: 3.5rem;
     align-items: center;
     display: flex;
     justify-content: center;
@@ -392,7 +406,7 @@ ul {
   
 }
 .product_quantity_button{
-   
+  height: 3.5rem;
   border-radius: 5px;
   padding-inline: 0.5rem;
 }
@@ -433,6 +447,12 @@ ul {
     .lg-only{
         display: none;
     }
+
+
+    h1{
+        line-height: 2rem;
+    }
+
     .nav_toggle {
         z-index: 9999;
         background-color: transparent;
@@ -582,12 +602,184 @@ ul {
 
 }
 
+@media(min-width:35rem) and (max-width:64rem){
 
-/*Desktop */
-@media(min-width:35rem){
 
+    .lg-only{
+        display: none;
+    }
+    
+    .sm-only {
+        display: none;
+    }
+
+    .md-only{
+        display: block;
+    }
+    main {
+        margin: 3rem;
+    }
+
+    h1{
+        line-height: 3rem;
+    }
+
+    .secondary_navigation {
+        --gap:2.5rem;
+    }
+    .logo {
+        height: 2.25rem;
+    }
+    
+    .cart img {
+        aspect-ratio: 1;
+        height: 1.5rem;
+    }
+    
     .sm-only{
         display:none;
+    }
+
+    .nav_toggle {
+        z-index: 9999;
+        background-color: transparent;
+        background-image: url("images/icon-menu.svg");
+        width: 1.5rem;
+        aspect-ratio: 1;
+        background-repeat: no-repeat;
+        border: none;
+      
+    }
+
+    .nav_toggle[aria-expanded="true"] {
+        background-image: url("./images/icon-close.svg");
+    }
+
+   
+
+    .primary_navigation {
+        
+        position: fixed;
+        inset: 0 30% 0 0;
+        flex-direction: column;
+        padding: min(15vh, 5rem) 2rem;
+        background-color: var(--clr-white);
+        z-index: 1000;
+        transform: translateX(-140%);
+        transition: transform 300ms ease;
+        font-size: var(--fs-menu);
+        font-weight: var(--fw-bold);
+        --gap:3rem;
+      
+    }
+
+    .primary_navigation[data-visible="true"] {
+
+        transform: translateX(0%);
+
+    }
+    .avatar img {
+        aspect-ratio: 1;
+        height: 3.125rem;
+    }
+    
+    .primary_header {
+        display: flex;
+        margin: 3rem 3rem 2rem 3rem ;
+        justify-content: space-between;
+        align-items:baseline;
+    }
+
+    .product-image-list-wrapper{
+        margin-top: 1rem;
+    }
+
+
+      /* Product Carousel */
+
+   
+      .carousel{
+        position:relative;
+        aspect-ratio: 1;
+        margin:0 auto;
+    }
+
+    .carousel_image{
+        height: 100%;
+        width: 100%;
+        object-fit: cover;
+       
+    }
+
+    .carousel_track {
+        height: 100%;
+        width: 100%;
+        position: relative;
+       
+        height: 100%;
+        transition: transform 250ms ease-in;
+        
+    }
+
+    .product_images{
+        overflow: hidden;
+    }
+
+    .carousel_slide{
+        position:absolute;
+        top:0;
+        bottom: 0;
+        width: 100%;
+    }
+
+    .carousel_button {
+        position: absolute;
+        transform: translateY(-50%);
+    }
+
+    .carousel_button  {
+        display: grid;
+        justify-content: center;
+        align-content: center;
+        height: 40px;
+        aspect-ratio: 1;
+        background-color:var(--clr-white);
+        border:none;
+        border-radius: 1000%;
+        cursor:pointer;
+        top: 50%;
+        transform:translateY(-50%);
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+       
+
+    }
+
+    .carousel_button--left{
+        left:10px;
+        z-index: 900;
+    }
+
+    .carousel_button--right{
+        right: 10px;
+        z-index: 900;
+    }
+         
+            
+
+}
+
+/*Desktop 1024 and more */
+@media(min-width:64rem){
+
+    h1{
+        line-height: 3.5rem;
+    }
+    .sm-only{
+        display:none;
+    }
+
+    .sm-device {
+        display: none;
     }
 
     .nav_toggle {
@@ -624,14 +816,14 @@ ul {
 
 .product_section {
     grid-template-columns: 1fr 1fr;
+    --gap:2rem;
+   
 }
 
-.product_info h1 {
-    line-height: normal;
-}
 
 .product_price_section{
-    display: grid;
+   
+    
 }
 
 .product-image-list-wrapper {
@@ -642,6 +834,16 @@ ul {
 
 .product-image-list-wrapper img {
     border-radius: 10px;
+}
+
+.product_images > img {
+        height: 27.8rem;
+        aspect-ratio: 1;
+}
+
+.product-image-list-wrapper img {
+    height: 5.5rem;
+    aspect-ratio: 1;
 }
 
 }
