--- a/style.css
+++ b/style.css
@@ -340,6 +340,7 @@ p {
     justify-content: center;
     padding: 1rem;
     flex-grow:1;
+    
 }
 
 .icon-button img {
@@ -383,6 +384,7 @@ ul {
 
 .product_info {
     padding: 1.5rem;
+    max-width: 40rem;
 }
 
 .product_price {
@@ -590,7 +592,8 @@ ul {
 
     .product_quantity_button{
         padding-inline: 0.5rem;
-        justify-content: space-around;
+        width: 20px;
+     
     }
 
     .product-image-list-wrapper{
